# fedpoffa-cbt-portal-be

./: .gitignore  Makefile  README.md  alembic.ini  env.example  pyproject.toml
alembic/: env.py
alembic/versions/: 5e68defabfef_make_program_id_not_null_in_courses_.py  7cbb583c3c7a_update_user_model_remove_fedpoffa_id_.py  afef16d27ff1_add_program_and_userprogram_models.py  b11dc701cf62_initial_migration_with_all_models.py  e2a0a27cd046_update_department_hod_to_user_reference.py  ed6a3855de05_clean_up_redundant_fields_and_.py
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  api.py
app/api/v1/analytics/: __init__.py  router.py
app/api/v1/assessments/: __init__.py  router.py
app/api/v1/auth/: __init__.py  router.py
app/api/v1/courses/: __init__.py  router.py
app/api/v1/departments/: __init__.py  router.py
app/api/v1/grading/: __init__.py  router.py
app/core/: __init__.py  config.py  dependencies.py  exceptions.py  security.py
app/db/: __init__.py  base.py
app/models/: __init__.py  assessment.py  course.py  course_enrollment.py  department.py  grading.py  program.py  question.py  semester.py  session.py  student_response.py  user.py  user_program.py
app/schemas/: __init__.py  auth.py  common.py  course.py  department.py  program.py  semester.py  user.py
app/services/: __init__.py  auth_service.py  course_service.py  department_service.py  email_service.py  program_service.py  semester_service.py  user_service.py
scripts/: migrate_courses_to_programs.py  seed_database.py  update_courses_with_programs.py
(+9 files in other folders)
